<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignupFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/signup_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/montserratmedium"
            android:text="@string/hi"
            android:textColor="@color/color4"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/signup_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:text="@string/new_account"
            android:textColor="@color/color6"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_welcome" />
    <LinearLayout
        android:id="@+id/signup_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/signup_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="80dp"
            android:id="@+id/signup_username">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="text"
                android:id="@+id/signup_username_value"
                android:layout_height="wrap_content"
                android:hint="@string/username" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:id="@+id/signup_password"
            android:layout_marginTop="20dp"
            app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:id="@+id/signup_password_value"
                android:layout_height="wrap_content"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:id="@+id/signup_cnf_password"
            android:layout_marginTop="20dp"
            app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:id="@+id/signup_cnf_password_value"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/signup_signupBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/signup"
        app:layout_constraintTop_toBottomOf="@id/signup_text_input"/>
    <LinearLayout
        android:gravity="center_horizontal"
        android:id="@+id/signup_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/signup_signupBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <View
            android:id="@+id/signup_view_left"
            android:layout_width="145dp"
            android:layout_height="2dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:background="@color/color4" />
        <TextView
            android:id="@+id/signup_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="28dp"
            android:text="@string/or"
            android:textColor="@color/color4"
            android:textSize="16sp" />
        <View
            android:id="@+id/signup_view_right"
            android:layout_width="145dp"
            android:layout_height="2dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:background="@color/color4" />
    </LinearLayout>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/signup_horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <TextView
                android:id="@+id/signup_already_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_already"
                android:textColor="@color/color6" />
            <TextView
                android:id="@+id/signup_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratmedium"
                android:text="@string/login"
                android:textColor="@color/color4"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>