<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.accounts.LoginFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/login_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/montserratmedium"
            android:text="@string/welcome"
            android:textColor="@color/color4"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/login_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:text="@string/login_desc"
            android:textColor="@color/color6"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_welcome" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="120dp"
            android:id="@+id/login_username"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_desc">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="text"
                android:id="@+id/login_username_value"
                android:layout_height="wrap_content"
                android:hint="@string/username" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:id="@+id/login_password"
            android:layout_marginTop="20dp"
            app:endIconMode="password_toggle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_username">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:id="@+id/login_password_value"
                android:layout_height="wrap_content"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/login_loginBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="50dp"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@id/login_password"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_forgot_password"
            android:text="@string/forgot_password"
            android:textColor="@color/color6"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/montserratmedium"
            app:layout_constraintTop_toBottomOf="@id/login_loginBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <LinearLayout
            android:gravity="center_horizontal"
            android:id="@+id/login_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/login_forgot_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <View
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/login_forgot_password"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/login_view_left"
                android:layout_width="145dp"
                android:layout_marginStart="30dp"
                android:background="@color/color4"
                android:layout_height="2dp"/>
            <TextView
                android:layout_marginTop="28dp"
                android:layout_width="wrap_content"
                android:textColor="@color/color4"
                android:textSize="16sp"
                android:layout_marginHorizontal="5dp"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:id="@+id/login_or"
                app:layout_constraintTop_toBottomOf="@id/login_forgot_password"
                app:layout_constraintLeft_toRightOf="@+id/login_view_left"
                app:layout_constraintRight_toLeftOf="@+id/login_view_right"/>
            <View
                android:layout_marginEnd="30dp"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/login_forgot_password"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/login_view_right"
                android:layout_width="145dp"
                android:background="@color/color4"
                android:layout_height="2dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_signupBtn"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            app:layout_constraintTop_toBottomOf="@id/login_horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:textColor="@color/color6"
                android:id="@+id/login_no_account"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textStyle="bold"
                android:paddingStart="5dp"
                android:fontFamily="@font/montserratmedium"
                android:textColor="@color/color4"
                android:id="@+id/login_signup"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>