<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:paddingVertical="20dp"
        android:id="@+id/profileGallery"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/profileCamera">

        <ImageButton
            android:id="@+id/profilePhotoGallery"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_baseline_image_24"
            app:tint="@color/black"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery" />

    </LinearLayout>

    <LinearLayout
        android:paddingVertical="20dp"
        android:id="@+id/profileCamera"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/profileGallery"
        app:layout_constraintRight_toRightOf="parent">

        <ImageButton
            android:id="@+id/profilePhotoCamera"
            android:layout_width="45dp"
            android:layout_height="45dp"

            android:backgroundTint="@color/white"
            android:src="@drawable/ic_baseline_camera_alt_24"
            app:tint="@color/black"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>