<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfileFragment">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profile_card_img"
        android:layout_width="170dp"
        android:layout_height="170dp"
        app:cardBackgroundColor="@color/color10"
        android:elevation="15dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="85dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="75dp"
            android:elevation="12dp"
            android:layout_gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:contentDescription="@string/profile_image"
                android:src="@drawable/img_profile"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:scaleType="centerCrop"
                android:id="@+id/profile_image"/>
        </com.google.android.material.card.MaterialCardView>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_card_img"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/profile_image"
        android:layout_marginTop="20dp"
        app:textAllCaps="true"
        android:id="@+id/profile_username"
        android:textSize="22sp"
        android:fontFamily="@font/montserratmedium"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/profile_news_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_username">
        <TextView
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:drawablePadding="10dp"
            android:layout_marginTop="50dp"
            android:paddingBottom="0dp"
            android:text="@string/news"
            app:drawableLeftCompat="@drawable/news"
            app:drawableTint="@color/color3" />
        <TextView
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:drawablePadding="10dp"
            android:layout_height="40dp"
            android:paddingBottom="0dp"
            android:text="@string/favourite"
            app:drawableLeftCompat="@drawable/favorite"
            app:drawableTint="@color/color3" />
    </LinearLayout>







    <com.google.android.material.button.MaterialButton
        android:id="@+id/profile_logout"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/logout"
        android:textColor="#ff0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>