<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
        <TextView
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/login"
            android:layout_marginTop="30dp"
            android:layout_marginStart="35dp"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:fontFamily="@font/robotoslab"
            android:layout_height="wrap_content"
            android:text="@string/login"/>

        <ImageView
            android:id="@+id/welcome"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="72dp"
            android:src="@drawable/welcome"
            app:layout_goneMarginTop="72dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/login"
            tools:ignore="ContentDescription" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="35dp"
            android:layout_height="wrap_content"
            app:circularflow_radiusInDP="30dp"
            app:layout_constraintTop_toBottomOf="@+id/welcome"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintRight_toRightOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/username"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/password"
            android:layout_marginHorizontal="35dp"
            android:layout_height="wrap_content"
            app:circularflow_radiusInDP="30dp"
            app:layout_constraintTop_toBottomOf="@+id/username"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintRight_toRightOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/password"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
